temp (desktop ui launcher, uses pre-installed JDK, not jpackage JRE )